# cevolve

./: .gitignore  DESIGN.md  README.md  WHITEPAPER.md  pyproject.toml
evolve/: __init__.py  charts.py  cli.py  core.py  main.py  persistence.py  session.py  tui.py
evolve/bench/: __init__.py
evolve/commands/: eval.py  guide.py  init.py  next.py  record.py  rethink.py  revert.py  run.py  sessions.py  status.py  stop.py
evolve/revert/: __init__.py
examples/: README.md
examples/agent-optimization/: README.md  agent.py  bench.sh  config.yaml  tools.py  train.py
examples/agent-optimization/evals/: tasks.json
examples/agent-optimization/prompts/: system.md
examples/llm-training/: README.md  prepare.py  train.py
examples/matmul/: README.md  train.py
examples/regression/: README.md  train.py
examples/sorting/: README.md  train.py
skills/cevolve/: SKILL.md
tests/: conftest.py  test_commit_best.py  test_convergence.py  test_crossover.py  test_evaluation.py  test_evolution.py  test_individual.py  test_integration.py  test_mutation.py  test_normalization.py  test_persistence.py  test_rethink.py  test_run_parser.py  test_selection.py  test_summary.py
